feat: scaffold set reminder command, code formatting

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       {
         "command": "code-remind.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "code-remind.setReminder",
+        "title": "Reminder: Put reminder on current line"
       }
     ]
   },
