--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/node-cron": "^3.0.1",
     "@types/vscode": "^1.64.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -78,6 +79,7 @@
   "dependencies": {
     "@types/uuid": "^8.3.4",
     "joi": "^17.6.0",
+    "node-cron": "^3.0.0",
     "uuid": "^8.3.2"
   }
 }
