--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "events": "^3.3.0",
     "joi": "^17.6.0",
     "node-cron": "^3.0.0",
     "uuid": "^8.3.2"
