feat: prepare for publish

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "code-remind",
   "displayName": "Code Remind",
-  "description": "",
+  "description": "A simple extensions that let's you set in-code reminders.",
   "version": "0.0.1",
+  "publisher": "flamingsoul2",
   "engines": {
     "vscode": "^1.64.0"
   },
