--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
+    "publish": "vsce publish",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
