--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "code-remind",
   "displayName": "Code Remind",
   "description": "A simple extensions that let's you set in-code reminders.",
-  "version": "0.0.4",
+  "version": "0.0.5",
+  "icon": "./icon.png",
   "publisher": "flamingsoul2",
   "repository": {
     "type": "git",
